<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/forest"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/fire_alarm"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/darkfire"/>

    <Button
        android:id="@+id/btCamera"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:onClick="goCamera"
        android:text="@string/camera"
        android:textSize="30sp"
        android:background="@color/tree"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btTable"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:onClick="goStats"
        android:text="@string/stats"
        android:textSize="30sp"
        android:background="@color/tree"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btGoOut"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:onClick="goOut"
        android:text="@string/exit"
        android:textSize="30sp"
        android:background="@color/tree"
        android:textColor="@color/white"/>

</LinearLayout>