<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/forest"
    tools:context=".ChooseNode">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="25dp"
        android:text="@string/node"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/darkfire"/>

    <Button
        android:id="@+id/btTemp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/one"
        android:textSize="30sp"
        android:background="@color/tree"
        android:textColor="@color/white"
        android:onClick="node1"/>

    <Button
        android:id="@+id/btHum"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:background="@color/tree"
        android:text="@string/two"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="node2"/>

</LinearLayout>